# computer_vision_course

./: .bashrc  .clang-format  .cv_create.swp  .gitignore  cv_create
ch10_feature_detection/: CMakeLists.txt
ch10_feature_detection/src/: CMakeLists.txt  LoG.cpp  LoG.h  canny.cpp  canny.h  harris_corner.cpp  harris_corner.h
ch10_feature_detection/test/: CMakeLists.txt  test_LoG.cpp  test_canny.cpp  test_harris_corner.cpp
ch10_feature_detection/utils/: opencv_utils.cpp
ch11_classifier/: CMakeLists.txt
ch11_classifier/src/: CMakeLists.txt  haar_feature.cpp  haar_feature.h  matrix.h
ch11_classifier/test/: CMakeLists.txt  test_haar_feature.cpp  test_intergral_img.cpp
ch11_classifier/utils/: opencv_utils.cpp  opencv_utils.h
ch12_line_fitting/: CMakeLists.txt
ch12_line_fitting/src/: CMakeLists.txt  hough.cpp  hough.h  ransac.cpp  ransac.h  visualizer.cpp  visualizer.h
ch12_line_fitting/test/: CMakeLists.txt  test_hough.cpp  test_ransac.cpp  test_visualizer.cpp
ch12_line_fitting/utils/: math_utils.h  (+4 more)
ch1_kmeans/: CMakeLists.txt  README.md  self_implement.cpp  test_opencv_kmeans.cpp
ch1_kmeans/include/: k_means.h
ch1_kmeans/report/: kmeans_report.odt
ch1_kmeans/src/: .k_means.cpp.swp  k_means.cpp  matrix_factorization.cpp  test_k_means.cpp
ch2_snake_model/: CMakeLists.txt  README.txt
ch2_snake_model/SnakeMatlabCode/: first_dev.m~  smooth_term_effect.m  smooth_term_effect.m~  test1114.m  tttest_internal_matrix.m
ch2_snake_model/Snake_active_contour/: CMakeLists.txt  snake_model.cpp  test_snake.cpp
ch2_snake_model/Snake_active_contour/include/: debug_print.h
ch2_snake_model/cpp_code/: CMakeLists.txt  snake.cpp  snake_model.cpp  test_snake.cpp
ch2_snake_model/include/: balloon_force.h  display.h  gradient_descent_base.h  gvf.h  snake.h  snake_model.h
ch2_snake_model/matlab_code/: ASnakeDemo.m  INterpolationContourPoint2D_DEMO.m  MakeContourClockwise2D.m  Snake2D.m  SnakeInternalForceMatrix2D.m  SnakeMoveIteration2D.m  snake_demo_2.m  test.m
ch2_snake_model/src/: .gvf.cpp.swp  .snake.cpp.swp  display.cpp  gradient_descent_base.cpp  gvf.cpp  iterative_matrix_solver.cpp  snake.cpp  snake_model.cpp  test_gvf.cpp  test_snake.cpp  test_snake_model.cpp
ch3_level_set/: CMakeLists.txt  README.md
ch3_level_set/MatlabCode/: EVOL_CV.m  LevelSetSegmentationCmpCore.m  test_sdf.m
ch3_level_set/docu/: test.tex
ch3_level_set/include/: display.h  gradient_descent_base.h  level_set_cv.h  level_set_helper_function.h  level_set_lbf.h  level_set_utils.h  sdf_map.h  snake.h
ch3_level_set/matlab/MatlabCode/: EVOL_CV.m  GetImgAndInitialLSF.m  LBF.m~  test_sdf.m~
ch3_level_set/matlab/MatlabCode/data/: test.m
ch3_level_set/matlab/MatlabCode/matlabcode_frompaper/DRLSE_v0/: demo_1.m
ch3_level_set/src/: CMakeLists.txt  display.cpp  gradient_descent_base.cpp  gradient_descent_base.h  height_map.cpp  height_map.h  level_set_cv.cpp  level_set_cv.h  level_set_helper_function.cpp  level_set_lbf.cpp  level_set_lbf.h  level_set_multi_phase.cpp  level_set_multi_phase.h  level_set_utils.cpp  level_set_utils.h  sdf_map.cpp  sdf_map.h  test.cpp  test_cv.cpp  test_lbf.cpp  test_sdf.cpp
ch3_level_set/test/: CMakeLists.txt  test_cv.cpp  test_height_map.cpp  test_lbf.cpp  test_multi_phase.cpp  test_sdf.cpp
ch3_level_set/utils/: display.h
ch4_graph_cut/: CMakeLists.txt
ch4_graph_cut/docu/: system.drawio
ch4_graph_cut/src/: CMakeLists.txt  distribution.cpp  distribution.h  ek.cpp  ek.h  em.cpp  em.h  gmm.cpp  gmm.h  graph.cpp  graph.h  graph_cut.cpp  graph_cut.h  graph_search.cpp  graph_search.h  image_graph.cpp  image_graph.h  interaction_tool.cpp  interaction_tool.h
ch4_graph_cut/test/: CMakeLists.txt  test_dfs.cpp  test_distribution.cpp  test_ek.cpp  test_gmm.cpp  test_graph.cpp  test_graph_cut.cpp  test_image_graph.cpp
ch4_graph_cut/utils/: display.cpp  display.h  gmm.cpp
ch5_motion_based_segmentation/: CMakeLists.txt  gmm.md
ch6_optical_flow/: CMakeLists.txt  a.out
ch6_optical_flow/src/: CMakeLists.txt  bounding_box.h  feature_points_manager.cpp  feature_points_manager.h  optical_flow.cpp  optical_flow.h  optical_flow_tracker.cpp  optical_flow_tracker.h
ch6_optical_flow/test/: CMakeLists.txt  test_ncc.cpp  test_optical_flow.cpp  test_optical_flow_tracker.cpp  test_optical_flow_tracker_opencv.cpp  test_put_val.cpp  test_record_dataset.cpp  test_status.cpp
ch6_optical_flow/test_optical_flow/: CMakeLists.txt  test_optical_flow.cpp  test_ref_optical_flow.cpp
ch7_mean_shift/: CMakeLists.txt  a.out
ch7_mean_shift/MatlabCode/: GetTargetHistogram.m  MeanShiftTrackingCore.m  MeanshiftTrackingDemo.m
ch7_mean_shift/MatlabCode/data25/: Thumbs.db
ch7_mean_shift/docu/: improvement.md  mean_shift_tracking.md
ch7_mean_shift/src/: CMakeLists.txt  bounding_box.h  bst.cpp  bst.h  data_base.cpp  data_base.h  gkdtree.h  histogram.h  kdtree.h  mean_shift.cpp  mean_shift.h  mean_shift_segmentation.cpp  mean_shift_segmentation.h  mean_shift_tracker.cpp  mean_shift_tracker.h  mean_shift_tracking.h  motion_predictor.h  ms_segmentation.cpp  ms_segmentation.h  ms_tracker.cpp  ms_tracker.h  ms_tracking.cpp  ms_tracking.h  tracking_data_base.cpp  tracking_data_base.h  visualizer.cpp  visualizer.h  visualizer_3d.cpp  visualizer_3d.h  window_base.h
ch7_mean_shift/test/: CMakeLists.txt  test_bst.cpp  test_class_histogram.cpp  test_gauss_data_generator.cpp  test_gkdtree.cpp  test_gkdtree_mean_shift.cpp  test_histogram.cpp  test_kdtree.cpp  test_mean_shift.cpp  test_mean_shift_tracker.cpp  test_ms_segmentation.cpp  test_ms_tracking.cpp  test_multithread.cpp  test_polymorphism.cpp  test_single_func.cpp
ch7_mean_shift/utils/: debug_utils.h  math_utils.h  opencv_utils.cpp  opencv_utils.h
ch8_particle_filter/: CMakeLists.txt
ch8_particle_filter/test/: CMakeLists.txt  test_moment_estimation.cpp  test_multithread.cpp  test_pf_tracker.cpp  test_pi.cpp
ch9_kernel_correlation_filter/: CMakeLists.txt
ch9_kernel_correlation_filter/test/: CMakeLists.txt  test_bbox.cpp  test_cf_tracker.cpp  test_compute_H.cpp  test_fft.cpp  test_rand_affine_transformation.cpp  test_small_func.cpp
(+43 files in other folders)
